# thebitcoingame_mono_repo

./: Makefile
services/api/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_baseline.py  002_auth_tables.py  003_mining_data.py  004_dashboard_tables.py  005_gamification_tables.py  006_games_lottery_tables.py  007_competition_tables.py  008_social_tables.py  009_education_tables.py  010_block_celebrations.py  011_level_celebrations.py  012_streak_celebrations.py
services/api/src/tbg/: __init__.py  config.py  database.py  dependencies.py  main.py  redis_client.py
services/api/tests/: __init__.py  conftest.py  test_health.py  test_middleware.py  test_zzz_alembic.py
services/api/tests/auth/: test_api_keys.py  test_auth_flow.py  test_bitcoin.py  test_change_password.py  test_email_login.py  test_email_registration.py  test_email_verification.py  test_jwt.py  test_password.py  test_password_reset.py  test_wallet_management.py
services/api/tests/dashboard/: test_dashboard.py
services/api/tests/email/: __init__.py  test_email_service.py
services/api/tests/integration/: test_competition_api.py  test_cooperative_lifecycle.py  test_games_api.py  test_gamification_api.py  test_gamification_api_populated.py  test_gamification_pipeline.py  test_leaderboard_10k.py  test_lottery_cycle.py  test_notifications_api.py  test_public_profile.py  test_streak_service.py  test_worldcup_lifecycle.py
services/api/tests/mining/: test_endpoints.py  test_hashrate.py  test_pagination.py
services/api/tests/phase8/: __init__.py  conftest.py  test_education.py  test_education_integration.py  test_interpolator.py
services/api/tests/unit/: test_badge_service.py  test_cooperative_rules.py  test_game_data_shape.py  test_invite_codes.py  test_leaderboard.py  test_level_computation.py  test_lottery_ranking.py  test_notification_preferences.py  test_privacy_enforcement.py  test_scoring.py  test_streak_boundaries.py  test_trigger_engine.py  test_weekly_boundaries.py  test_worldcup_state_machine.py  test_xp_service.py
services/api/tests/users/: test_profile.py
services/api/tests/workers/: test_event_consumer.py
services/api/tests/ws/: test_bridge.py  test_manager.py  test_subscriptions.py  (+1 more)
services/event-collector/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/event-collector/sql/: init.sql
services/event-collector/src/: collector.py  config.py  db_writer.py  dedup.py  nats_consumer.py  redis_publisher.py  schemas.py
services/event-collector/tests/: test_collector.py  test_schemas.py
(+462 files in other folders)
